# shovel-segment

./: .gitmodules  CMakeLists.txt  README.md  package.xml
.catkin_tools/profiles/default/: devel_collisions.txt
config/: default.yaml
include/: segmentation.h
launch/: segmentation.launch
src/: helper.cpp  main.cpp  segmentation.cpp
src/registration/: CMakeLists.txt  package.xml
src/registration/launch/: registration.launch
src/registration/msg/: TransformationMatrix.msg
src/registration/scripts/: dataloader.py  dataset.py  icp.py  registration.py  tester.py
src/segmentation/: CMakeLists.txt  package.xml
src/segmentation/config/: default.yaml
src/segmentation/include/: segmentation.h
src/segmentation/src/: helper.cpp  segmentation.cpp  utils.cpp
